Added end door(Opens when finished)

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -41,6 +41,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Grab",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Grab",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="GrabRelease",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="SidewaysAD",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="SidewaysAD",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="ForwardWS",Key=W,Scale=1.000000)
