Added: MainMenu End-Door Opening & Lights

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,6 +8,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/OurGameMode.OurGameMode_C
+EditorStartupMap=/Game/DontCommit/Maps/TestRoom1.TestRoom1
+GameDefaultMap=/Game/DontCommit/Scenes/MainMenu.MainMenu
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure=False
@@ -111,5 +113,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
