Added and fixed a few stuff ( added scroll & zoom to light ball)

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -42,6 +42,11 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Grab",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="GrabRelease",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="GrabRelease",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="PullCloser",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="PullAway",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="PullCloser",Key=Add,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="PullAway",Key=Subtract,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="SidewaysAD",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="SidewaysAD",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="ForwardWS",Key=W,Scale=1.000000)
